hphp/hack/test/sound_dynamic/typing/top_level_2.bad.php.exp
File "top_level_2.bad.php", line 6, characters 10-12:
Function  `foo` is not dynamically callable. (Typing[4402])
  File "top_level_2.bad.php", line 7, characters 10-21:
  Invalid return type
  File "top_level_2.bad.php", line 6, characters 18-23:
  Expected `dynamic` because method must be callable in a dynamic context
  File "top_level_2.bad.php", line 7, characters 14-14:
  But got `A<int>`
